--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,16 +11,16 @@
     </head>
     <body>
         {% block header %}
-        <nav class="navbar fixed-top navbar-expand-lg navbar-ligth bg-ligth fixed-top ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="">Symfony 3</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="">Symfony 3</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="">Nosotros</a>
+            <a class="nav-link" href="{{path('nosotros')}}">Nosotros</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Tapas</a>
@@ -42,8 +42,15 @@
       </div>
     </div>
     </nav>
+    <br/>
         {% endblock %}
         {% block body %}{% endblock %}
+        <footer class="py-1">
+        <div class="container">
+         <p class="m-0 text-center ">Copyright &copy; jtrivino@online.com 2020</p>
+        </div>
+    <!-- /.container -->
+  </footer>
         {% block javascripts %}
         <script src="{{asset('vendor/jquery/jquery.min.js')}}"></script>
         <script src="{{asset('vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
