--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,9 +30,9 @@
               Bares
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="">Valencia</a>
-              <a class="dropdown-item" href="">Barcelona</a>
-              <a class="dropdown-item" href="">Madrid</a>
+              <a class="dropdown-item" href="{{path('contactar', {'sitio': 'vlc'}) }}">Valencia</a>
+              <a class="dropdown-item" href="{{path('contactar', {'sitio': 'bcn'}) }}">Barcelona</a>
+              <a class="dropdown-item" href="{{path('contactar', {'sitio': 'mdr'}) }}">Madrid</a>
             </div>
           </li>
           <li class="nav-item">
